Bug 189771 - "Limit feed archive size to:" setting is not enforced
Summary: "Limit feed archive size to:" setting is not enforced
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-16 03:26 UTC by Matt Sharp
Modified: 2009-07-20 19:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Sharp 2009-04-16 03:26:41 UTC
Version:           1.4.2 (using KDE 4.2.2)
Compiler:          GCC-4.3.2 
OS:                Linux
Installed from:    Gentoo Packages

I have set Limit feed archive size to 500 articles, and all my feeds have archive settings set to "use default settings".  However I have a few feeds that now have over 500 articles (one is almost up to 1000), and have been for weeks.  I haven't marked any articles as important (Do not expire important articles is set).

The expected behaviour is that no feed should have more than around 500 unimportant articles.
Comment 1 Frank Osterfeld 2009-07-20 19:48:19 UTC
SVN commit 1000006 by osterfeld:

don't use the deletejob (which is only a fake async job for akonadi porting preparation) but delete directly. Looking up the article in the feed list does not work as the main feed list at deletejob creation time is an empty one.
Fixes the LimitArticleNumber feature

BUG: 189771

 M  +1 -1      articlejobs.cpp  
 M  +2 -5      feed.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1000006