don't use the deletejob (which is only a fake async job for akonadi porting preparation) but delete directly. Looking up the article in the feed list does not work as the main feed list at deletejob creation time is an empty one. Fixes the LimitArticleNumber feature

BUG: 189771

svn path=/branches/KDE/4.3/kdepim/; revision=1000006